@@ -20,100 +20,100 @@ import com.logicaldoc.util.io.TarUtil;
  */
 public class TarParser extends AbstractParser {
 
-	private static final Logger log = LoggerFactory.getLogger(TarParser.class);
+    private static final Logger log = LoggerFactory.getLogger(TarParser.class);
 
-	@Override
-	public void internalParse(InputStream input, ParseParameters parameters, StringBuilder content)
-			throws IOException, ParsingException {
-		File tarFile = FileUtil.createTempFile("parsetar", ".tar");
-		try {
-			FileUtil.writeFile(input, tarFile.getAbsolutePath());
-			List<String> entries = new TarUtil().listEntries(tarFile);
-			if (entries.size() > 1) {
-				/*
-				 * If we have more entries just print the entries list
-				 */
-				for (String line : entries) {
-					content.append(line);
-					content.append("\n");
-				}
-			} else {
-				/*
-				 * If we have just one entry, parse it
-				 */
-				String entry = entries.get(0);
-				String entryExtension = FileUtil.getExtension(entry);
-				File uncompressedEntryFile = FileUtil.createTempFile("parse", "." + entryExtension);
-				try {
-					Parser entryParser = ParserFactory.getParser(entryExtension);
-					if (entryParser == null)
-						throw new IOException(String.format("Unable to find a parser for %s", entryExtension));
+    @Override
+    public void internalParse(InputStream input, ParseParameters parameters, StringBuilder content)
+            throws IOException, ParsingException {
+        File tarFile = FileUtil.createTempFile("parsetar", ".tar");
+        try {
+            FileUtil.writeFile(input, tarFile.getAbsolutePath());
+            List<String> entries = new TarUtil().listEntries(tarFile);
+            if (entries.size() > 1) {
+                /*
+                 * If we have more entries just print the entries list
+                 */
+                for (String line : entries) {
+                    content.append(line);
+                    content.append("\n");
+                }
+            } else {
+                /*
+                 * If we have just one entry, parse it
+                 */
+                String entry = entries.get(0);
+                String entryExtension = FileUtil.getExtension(entry);
+                File uncompressedEntryFile = FileUtil.createTempFile("parse", ".%s".formatted(entryExtension));
+                try {
+                    Parser entryParser = ParserFactory.getParser(entryExtension);
+                    if (entryParser == null)
+                        throw new IOException(String.format("Unable to find a parser for %s", entryExtension));
 
-					new TarUtil().extractEntry(tarFile, uncompressedEntryFile);
+                    new TarUtil().extractEntry(tarFile, uncompressedEntryFile);
 
-					Document clone = new Document(parameters.getDocument());
-					clone.setFileName(uncompressedEntryFile.getName());
-					String text = entryParser.parse(uncompressedEntryFile, uncompressedEntryFile.getName(),
-							parameters.getEncoding(), parameters.getLocale(), parameters.getTenant(),
-							parameters.getDocument(), parameters.getFileVersion());
-					content.append(text);
-				} finally {
-					if (uncompressedEntryFile != null)
-						FileUtil.delete(uncompressedEntryFile);
-				}
-			}
-		} finally {
-			FileUtil.delete(tarFile);
-		}
-	}
+                    Document clone = new Document(parameters.getDocument());
+                    clone.setFileName(uncompressedEntryFile.getName());
+                    String text = entryParser.parse(uncompressedEntryFile, uncompressedEntryFile.getName(),
+                            parameters.getEncoding(), parameters.getLocale(), parameters.getTenant(),
+                            parameters.getDocument(), parameters.getFileVersion());
+                    content.append(text);
+                } finally {
+                    if (uncompressedEntryFile != null)
+                        FileUtil.delete(uncompressedEntryFile);
+                }
+            }
+        } finally {
+            FileUtil.delete(tarFile);
+        }
+    }
 
-	/**
-	 * The number of pages is the number entries
-	 */
-	@Override
-	public int countPages(InputStream input, String filename) {
-		File tarFile = null;
-		try {
-			tarFile = FileUtil.createTempFile("parsetar", ".tar");
-			FileUtil.writeFile(input, tarFile.getAbsolutePath());
-			return countPages(tarFile, filename);
-		} catch (Exception t) {
-			log.error(t.getMessage(), t);
-		} finally {
-			if (tarFile != null)
-				FileUtil.delete(tarFile);
-		}
-		return 1;
-	}
+    /**
+     * The number of pages is the number entries
+     */
+    @Override
+    public int countPages(InputStream input, String filename) {
+        File tarFile = null;
+        try {
+            tarFile = FileUtil.createTempFile("parsetar", ".tar");
+            FileUtil.writeFile(input, tarFile.getAbsolutePath());
+            return countPages(tarFile, filename);
+        } catch (Exception t) {
+            log.error(t.getMessage(), t);
+        } finally {
+            if (tarFile != null)
+                FileUtil.delete(tarFile);
+        }
+        return 1;
+    }
 
-	@Override
-	public int countPages(File input, String filename) {
-		try {
-			List<String> entries = new TarUtil().listEntries(input);
-			if (entries.size() > 1) {
-				return entries.size();
-			} else {
-				/*
-				 * If we have just one entry, count it's pages
-				 */
-				String entry = entries.get(0);
-				String entryExtension = FileUtil.getExtension(entry);
-				File uncompressedEntryFile = FileUtil.createTempFile("parse", "." + entryExtension);
-				try {
-					Parser entryParser = ParserFactory.getParser(entryExtension);
-					if (entryParser == null)
-						throw new IOException(String.format("Unable to find a parser for %s", entryExtension));
+    @Override
+    public int countPages(File input, String filename) {
+        try {
+            List<String> entries = new TarUtil().listEntries(input);
+            if (entries.size() > 1) {
+                return entries.size();
+            } else {
+                /*
+                 * If we have just one entry, count it's pages
+                 */
+                String entry = entries.get(0);
+                String entryExtension = FileUtil.getExtension(entry);
+                File uncompressedEntryFile = FileUtil.createTempFile("parse", ".%s".formatted(entryExtension));
+                try {
+                    Parser entryParser = ParserFactory.getParser(entryExtension);
+                    if (entryParser == null)
+                        throw new IOException(String.format("Unable to find a parser for %s", entryExtension));
 
-					new TarUtil().extractEntry(input, uncompressedEntryFile);
-					return entryParser.countPages(uncompressedEntryFile, uncompressedEntryFile.getName());
-				} finally {
-					if (uncompressedEntryFile != null)
-						FileUtil.delete(uncompressedEntryFile);
-				}
-			}
-		} catch (Exception e) {
-			log.error(e.getMessage(), e);
-		}
-		return 1;
-	}
+                    new TarUtil().extractEntry(input, uncompressedEntryFile);
+                    return entryParser.countPages(uncompressedEntryFile, uncompressedEntryFile.getName());
+                } finally {
+                    if (uncompressedEntryFile != null)
+                        FileUtil.delete(uncompressedEntryFile);
+                }
+            }
+        } catch (Exception e) {
+            log.error(e.getMessage(), e);
+        }
+        return 1;
+    }
 }
